(AngularJS) ngRepeat with custom directives for viewModels

--- a/appenv/src/src/static/app/keys/key-info.html
+++ b/appenv/src/src/static/app/keys/key-info.html
@@ -1,8 +1,8 @@
 <div class="panel panel-default">
     <div class="panel-heading">
-        <span>Key ID: {{id}}</span>
-        <span>Tag ID: {{tag_id}}</span>
-        <span>Room number: {{room_id}}</span>
+        <span>Key ID: {{key.id}}</span>
+        <span>Tag ID: {{key.tag_id}}</span>
+        <span>Room number: {{key.room_id}}</span>
         <span></span>
         <button class="btn btn-primary">Edit</button>
     </div>
