--- a/appenv/src/src/static/app/keys/keys.html
+++ b/appenv/src/src/static/app/keys/keys.html
@@ -11,9 +11,8 @@
             </select>
         </div>
         <hr/>
-        <div ng-repeat="key in keys.list | orderBy:keys.orderProp track by $index">
-            <span>ID: {{key.id}}</span><span>Tag: {{key.tag_id}}</span><span>Room number: {{key.room_id}}</span>
-            <!--<keyInfo id="key.id" tag_id="key.tag_id" room_id="key.room_id"></keyInfo>-->
+        <div ng-repeat="item in keys.list | orderBy:keys.orderProp" key-info="item">
+            <!--<span>ID: {{key.id}}</span><span>Tag: {{key.tag_id}}</span><span>Room number: {{key.room_id}}</span>-->
         </div>
     </div>
 </div>
