--- a/appenv/src/src/static/app/users/user-info.html
+++ b/appenv/src/src/static/app/users/user-info.html
@@ -5,7 +5,7 @@
                 <h4>User # {{user.id}}</h4>
             </div>
             <div class="panel-body">
-                <span style="max-width: 30%"><img class="img-thumbnail" ng-src="user.pic_url" alt="avatar"></span>
+                <span style="max-width: 30%"><img class="img-thumbnail" ng-src="{{user.pic_url}}" alt="avatar"></span>
                 <span style="width: 30%">{{user.first_name}} {{user.last_name}}</span>
                 <span style="width: 30%"><i>{{user.email}}</i></span>
                 <span style="width: 30%">{{user.tag_id}}</span>
@@ -16,11 +16,3 @@
         </div>
     </div>
 </div>
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<span style="max-width: 30%"><img class="img-thumbnail" src="{{pic_url}}" alt="avatar"></span>-->
-<!--<span style="width: 30%">{{first_name}} {{last_name}}</span>-->
-<!--<span style="width: 30%">{{id}}</span>-->
-<!--<span style="width: 30%">{{tag_id}}</span>-->
-<!--</div>-->
-<!--</div>-->
