(Flask) Failed query - failed column name

--- a/appenv/src/src/static/app/users/user-info.html
+++ b/appenv/src/src/static/app/users/user-info.html
@@ -2,7 +2,8 @@
     <div class="row">
         <div class="panel panel-primary">
             <div class="panel-heading">
-                <h4>User # {{user.id}}</h4>
+                <h4>User number: {{user.id}}</h4>
+                <h5>Role: {{user.role}}</h5>
             </div>
             <div class="panel-body">
                 <span style="max-width: 30%"><img class="img-thumbnail" ng-src="{{user.pic_url}}" alt="avatar"></span>
