(FileUpload) Added image service both in AngularJS and Flask, updated user register template, included angularjs file upload plugin from danialfarid

--- a/appenv/src/src/static/app/register/user-register.html
+++ b/appenv/src/src/static/app/register/user-register.html
@@ -34,10 +34,18 @@
                             <option value="1">Professor</option>
                             <option value="2">Student</option>
                         </select>
-                        <label for="purl">Picture url:</label>
-                        <input ng-model="picUrl" class="form-control" placeholder="Enter picture url"
-                               id="purl" type="text" ng-required="true"/>
-                        <button ng-disabled="isValid()" ng-click="register()" class="btn btn-primary">Register</button>
+                        <div ng-show="!image.src"
+                             class="drop-box drop-box-container"
+                             ngf-change="readImageFile($file)"
+                             ng-model="file"
+                             ngf-drop="" ngf-select=""
+                             ngf-accept="image/*" accept="image/*">
+                            <span>Drop image or click to upload profile photo</span>
+                        </div>
+                        <div ng-hide="!image.src" class="drop-box-container">
+                            <img class="drop-box-container img-responsive img-rounded" ngf-src="image" alt="avatar"/>
+                        </div>
+                        <button ng-disabled="isNotValid()" ng-click="register()" class="btn btn-primary">Register</button>
                         <button ng-click="cancel()" class="btn btn-danger">Cancel</button>
                     </div>
                 </div>
