--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -15,6 +15,8 @@
     <script src="static/vendor/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="static/vendor/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="static/vendor/ngSocketIO/dist/angular-socketio.min.js"></script>
+    <script src="static/vendor/ng-file-upload-shim/ng-file-upload-shim(.min).js"></script> <!-- for no html5 browsers support -->
+    <script src="static/vendor/ng-file-upload/ng-file-upload(.min).js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.4.0.js"></script>
 
