--- a/appenv/src/src/static/app/register/user-register.html
+++ b/appenv/src/src/static/app/register/user-register.html
@@ -19,8 +19,10 @@
             <div class="panel-heading">Editing information about person #<span>{{tagData}}</span></div>
             <div class="panel-body">
                 <div class="form-inline">
-                    <div class="drop-box-container drop-box">
-                        <img ng-hide="!image" class="img-responsive img-rounded" ngf-src="image" alt="avatar"/>
+                    <div class="form-group">
+                        <div ng-class="{'drop-box': !image}" class="drop-box-container">
+                            <img ng-hide="!image" class="img-responsive img-rounded" ngf-src="image" alt="avatar"/>
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="fname">First name:</label>
