(AngularJS) Users list view page

--- a/appenv/src/src/static/app/users/users.html
+++ b/appenv/src/src/static/app/users/users.html
@@ -12,7 +12,6 @@
             </select>
         </div>
         <hr/>
-        <div ng-repeat="item in users.list | orderBy:users.orderProp" user-info="item">
-        </div>
+        <div ng-repeat="item in users.list | orderBy:users.orderProp" user-info="item"></div>
     </div>
 </div>
