--- a/appenv/src/src/static/app/users/user-info.html
+++ b/appenv/src/src/static/app/users/user-info.html
@@ -13,7 +13,8 @@
             </div>
         </div>
         <div>
-            <button class="btn btn-primary" ng-href="/user/sessions/{{user.id}}">View user sessions</button>
+            <button class="btn btn-primary">View user sessions</button>
+            <!--<button class="btn btn-primary" ng-href="/user/sessions/{{user.id}}">View user sessions</button>-->
         </div>
     </div>
 </div>
