(AngularJS) response data data and json parse were ok - revert

--- a/appenv/src/src/static/app/users/users.html
+++ b/appenv/src/src/static/app/users/users.html
@@ -5,10 +5,11 @@
         <div>
             Order users by:
             <select ng-model="users.orderProp" name="orderProp" id="orderProp">
-                <option value="id">User ID</option>
+                <option value="user_id">User ID</option>
                 <option value="tag_id">Tag ID</option>
                 <option value="first_name">First name</option>
                 <option value="last_name">Last name</option>
+                <option value="email">Email</option>
             </select>
         </div>
         <hr/>
