--- a/appenv/src/src/static/app/users/users.html
+++ b/appenv/src/src/static/app/users/users.html
@@ -7,6 +7,7 @@
             <select ng-model="users.orderProp" name="orderProp" id="orderProp">
                 <option value="user_id">User ID</option>
                 <option value="tag_id">Tag ID</option>
+                <option value="role_id">Role</option>
                 <option value="first_name">First name</option>
                 <option value="last_name">Last name</option>
                 <option value="email">Email</option>
