(AngularJS) Working on UI - templating

--- a/appenv/src/src/static/app/keys/key-info.html
+++ b/appenv/src/src/static/app/keys/key-info.html
@@ -4,6 +4,8 @@
         <span>Tag ID: {{key.tag_id}}</span>
         <span>Room number: {{key.room_id}}</span>
         <span></span>
-        <button class="btn btn-primary">Edit</button>
+        <div>
+            <button class="btn btn-primary">Edit</button>
+        </div>
     </div>
 </div>
