--- a/appenv/src/src/static/app/users/user-info.html
+++ b/appenv/src/src/static/app/users/user-info.html
@@ -10,10 +10,10 @@
                 <h5>Role: {{user.role_title}}</h5>
             </div>
             <div class="panel-body">
-                <span style="max-width: 30%"><img class="img-thumbnail" ng-src="{{user.pic_url}}" alt="avatar"></span>
-                <span style="width: 30%">{{user.first_name}} {{user.last_name}}</span>
-                <span style="width: 30%"><i>{{user.email}}</i></span>
-                <span style="width: 30%">{{user.tag_id}}</span>
+                <span class="user-field drop-box-container"><img class="img-thumbnail" ng-src="{{user.pic_url}}" alt="avatar"></span>
+                <span class="user-field">{{user.first_name}} {{user.last_name}}</span>
+                <span class="user-field"><i>{{user.email}}</i></span>
+                <span class="user-field">{{user.tag_id}}</span>
             </div>
         </div>
     </div>
