(Flask & AngularJS) Updated routes in views, common name convention in view functions and updated AngularJS views for searches

--- a/appenv/src/src/static/app/keys/key-info.html
+++ b/appenv/src/src/static/app/keys/key-info.html
@@ -1,3 +1,4 @@
+<div key-sessions key="key.id"></div>
 <div class="panel panel-default">
     <div class="panel-heading">
         <span>Key ID: {{key.id}}</span>
