--- a/appenv/src/src/static/app/search-users/users-search-form.html
+++ b/appenv/src/src/static/app/search-users/users-search-form.html
@@ -11,5 +11,5 @@
         </div>
     </div>
     <hr/>
-    <users-search-results results="usersSearch.results"></users-search-results>
+    <div users-search-results results="usersSearch.results"></div>
 </div>
