--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -42,8 +42,6 @@
     <script src="static/app/keys/keys.service.js"></script>
     <script src="static/app/keys/keys.controller.js"></script>
     <script src="static/app/keys/key-info.directive.js"></script>
-    <script src="static/app/key-to-sessions/key-session.controller.js"></script>
-    <script src="static/app/key-to-sessions/key-session.directive.js"></script>
     <script src="static/app/search-keys/keys-search-form.controller.js"></script>
 
     <script src="static/app/users/users.service.js"></script>
@@ -52,8 +50,11 @@
     <script src="static/app/search-users/users-results.directive.js"></script>
     <script src="static/app/search-users/users-search.controller.js"></script>
 
-    <script src="static/app/user-to-sessions/user-sessions.service.js"></script>
-    <script src="static/app/user-to-sessions/user-sessions.controller.js"></script>
+
+    <script src="static/app/search-sessions/search-sessions.service.js"></script>
+    <script src="static/app/search-sessions/key.search-sessions.controller.js"></script>
+    <script src="static/app/search-sessions/key.search-sessions.directive.js"></script>
+    <script src="static/app/search-sessions/user.search-sessions.controller.js"></script>
 
     <script src="static/app/register/register.service.js"></script>
     <script src="static/app/register/key-register.controller.js"></script>
