(AngularJS) Delete sessions

--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -36,8 +36,8 @@
     <script src="static/app/reader/reader.directive.js"></script>
 
     <script src="static/app/sessions/session.service.js"></script>
+    <script src="static/app/sessions/session-info.directive.js"></script>
     <script src="static/app/sessions/sessions.controller.js"></script>
-    <script src="static/app/sessions/session-info.controller.js"></script>
 
     <script src="static/app/keys/keys.service.js"></script>
     <script src="static/app/keys/keys.controller.js"></script>
