--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -53,8 +53,9 @@
 
     <script src="static/app/search-sessions/search-sessions.service.js"></script>
     <script src="static/app/search-sessions/key.search-sessions.controller.js"></script>
-    <script src="static/app/search-sessions/key.search-sessions.directive.js"></script>
     <script src="static/app/search-sessions/user.search-sessions.controller.js"></script>
+    <script src="static/app/search-sessions/key-sessions.directive.js"></script>
+    <script src="static/app/search-sessions/user-sessions.directive.js"></script>
 
     <script src="static/app/register/register.service.js"></script>
     <script src="static/app/register/key-register.controller.js"></script>
