(AngularJS) added details functionality - history of sessions for keys and users now in different view than instance-info view

--- a/appenv/src/src/static/app/keys/key-info.html
+++ b/appenv/src/src/static/app/keys/key-info.html
@@ -1,4 +1,4 @@
-<div key-sessions key="key.id"></div>
+<button class="btn btn-default" ng-href="/key-details/{{key.id}}">Details</button>
 <div class="panel panel-default">
     <div class="panel-heading">
         <span>Key ID: {{key.id}}</span>
