--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -57,6 +57,9 @@
     <script src="static/app/search-sessions/key-sessions.directive.js"></script>
     <script src="static/app/search-sessions/user-sessions.directive.js"></script>
 
+    <script src="static/app/key-details/key-details.controller.js"></script>
+    <script src="static/app/user-details/user-details.controller.js"></script>
+
     <script src="static/app/register/register.service.js"></script>
     <script src="static/app/register/key-register.controller.js"></script>
     <script src="static/app/register/user-register.controller.js"></script>
