--- a/appenv/src/src/static/app/users/user-info.html
+++ b/appenv/src/src/static/app/users/user-info.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div user-sessions user="user.user_id"></div>
+        <button class="btn btn-default" ng-href="/user-details/{{user.user_id}}">Details</button>
         <div class="panel panel-primary">
             <div class="panel-heading">
                 <h4>User number: {{user.user_id}}</h4>
