(AngularJS) links on info views

--- a/appenv/src/src/static/app/keys/key-info.html
+++ b/appenv/src/src/static/app/keys/key-info.html
@@ -1,4 +1,4 @@
-<button class="btn btn-default" ng-href="/key-details/{{key.id}}">Details</button>
+<div class="btn btn-default"><a ng-href="/key-details/{{key.id}}" class="no-decoration">Details</a></div>
 <div class="panel panel-default">
     <div class="panel-heading">
         <span>Key ID: {{key.id}}</span>
