(Reader) post was searching any session with any of fields - needs to be exclusive search

--- a/appenv/src/src/static/app/key-details/key-details.html
+++ b/appenv/src/src/static/app/key-details/key-details.html
@@ -1,5 +1,9 @@
 <div class="container">
     <div>
+        <h1>Details for key # {{keyId}}</h1>
+        <hr/>
+    </div>
+    <div>
         <div ng-if="keyData!=null">
             <div key-info="keyData"></div>
             <div key-sessions key="keyId"></div>
