--- a/appenv/src/src/static/app/user-details/user-details.html
+++ b/appenv/src/src/static/app/user-details/user-details.html
@@ -1,5 +1,9 @@
 <div class="container">
     <div>
+        <h1>Details for user # {{userId}}</h1>
+        <hr/>
+    </div>
+    <div>
         <div ng-if="userData!=null">
             <div user-info="userData"></div>
             <div user-sessions user="userId"></div>
