--- a/appenv/src/src/static/app/keys/key-info.html
+++ b/appenv/src/src/static/app/keys/key-info.html
@@ -1,4 +1,6 @@
-<div class="btn btn-default"><a ng-href="/key-details/{{key.id}}" class="no-decoration">Details</a></div>
+<div class="btn btn-default">
+    <a ng-href="/key-details/{{key.id}}" class="no-decoration">Details</a>
+</div>
 <div class="panel panel-default">
     <div class="panel-heading">
         <span>Key ID: {{key.id}}</span>
