(AngularJS) search results

--- a/appenv/src/src/static/app/search-keys/keys-results.html
+++ b/appenv/src/src/static/app/search-keys/keys-results.html
@@ -4,11 +4,11 @@
     <div>
         Order users by:
         <select ng-model="orderProp" name="orderProp" id="orderProp">
-            <option value="user_id">Key ID</option>
+            <option value="id">Key ID</option>
             <option value="tag_id">Tag ID</option>
             <option value="room_id">Room ID</option>
         </select>
     </div>
     <hr/>
-    <div ng-repeat="key in results | orderBy:orderProp track by $index" key-info="key"></div>
+    <div ng-repeat="item in results | orderBy:orderProp track by $index" key-info="item"></div>
 </div>
