--- a/appenv/src/src/static/app/search-users/users-results.html
+++ b/appenv/src/src/static/app/search-users/users-results.html
@@ -13,5 +13,5 @@
         </select>
     </div>
     <hr/>
-    <div ng-repeat="user in results | orderBy:orderProp track by $index" user-info="user"></div>
+    <div ng-repeat="item in results | orderBy:orderProp track by $index" user-info="item"></div>
 </div>
