(AngularJS) still keys search form

--- a/appenv/src/src/static/app/search-keys/keys-search-form.html
+++ b/appenv/src/src/static/app/search-keys/keys-search-form.html
@@ -14,5 +14,5 @@
             </div>
         </div>
     </div>
-    <div keys-search-results results="keysSearch.results"></div>
+    <div ng-if="keysSearch.results" keys-search-results results="keysSearch.results"></div>
 </div>
