(AngularJS) keys search results directive not included in index.html

--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -42,6 +42,7 @@
     <script src="static/app/keys/keys.service.js"></script>
     <script src="static/app/keys/keys.controller.js"></script>
     <script src="static/app/keys/key-info.directive.js"></script>
+    <script src="static/app/search-keys/keys-results.directive.js"></script>
     <script src="static/app/search-keys/keys-search-form.controller.js"></script>
 
     <script src="static/app/users/users.service.js"></script>
@@ -49,7 +50,6 @@
     <script src="static/app/users/user-info.directive.js"></script>
     <script src="static/app/search-users/users-results.directive.js"></script>
     <script src="static/app/search-users/users-search-form.controller.js"></script>
-
 
     <script src="static/app/search-sessions/search-sessions.service.js"></script>
     <script src="static/app/search-sessions/key.search-sessions.controller.js"></script>
