(Flask) search - results if none break searches

--- a/src/src/static/app/home/home.html
+++ b/src/src/static/app/home/home.html
@@ -1,4 +1,6 @@
-<h3>{{title}}</h3>
-<div class="container">
-    <div>{{ message }}</div>
+<div class="container-fluid">
+    <h3>{{title}}</h3>
+    <div class="container">
+        <div>{{ message }}</div>
+    </div>
 </div>
