(AngularJS) check if route path accesible on routechangesuccess event and added hero image on home page

--- a/src/src/static/app/search-users/users-search-form.html
+++ b/src/src/static/app/search-users/users-search-form.html
@@ -6,7 +6,7 @@
     <div class="panel panel-primary">
         <div class="panel-heading">Users search form</div>
         <div class="panel-body">
-            <h3>Check for users by entering their first name or last name (supported for now)</h3>
+            <h3>Check for users by entering their first name or last name</h3>
             <div class="form-group">
                 <input ng-model="usersSearch.queryset" type="text" placeholder="Enter search data..."/>
                 <button ng-click="usersSearch.submit()" type="submit" class="btn btn-primary">Search</button>
