(AngularJS) hero image orientation

--- a/src/src/static/app/home/home.html
+++ b/src/src/static/app/home/home.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div>{{ message }}</div>
     </div>
-    <div class="hero-img">
-        <img class="img-responsive" src="/static/images/hero-01.jpg" alt="hero-img"/>
+    <div>
+        <img class="img-responsive hero-img" src="/static/images/hero-01.jpg" alt="hero-img"/>
     </div>
 </div>
