(AngularJS) hero image - home page

--- a/src/src/static/app/home/home.html
+++ b/src/src/static/app/home/home.html
@@ -1,10 +1,9 @@
 <div class="container-fluid">
-    <h3>{{title}}</h3>
-    <div class="container">
-        <div>{{ message }}</div>
+    <div class="jumbotron hero-img">
+        <div class="text-center">
+            <h3>{{title}}</h3>
+            <div>{{ message }}</div>
+        </div>
     </div>
-    <br/>
-    <div>
-        <img class="img-responsive hero-img" src="/static/images/hero-01.jpg" alt="hero-img"/>
-    </div>
+    <!--<img class="img-responsive hero-img" src="/static/images/hero-01.jpg" alt="hero-img"/>-->
 </div>
