(AngularJS) hero image - home page - rotate

--- a/src/src/static/app/home/home.html
+++ b/src/src/static/app/home/home.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-    <div class="jumbotron hero-img">
-        <div class="text-center">
+    <div id="hero-img" class="jumbotron">
+        <div id="hero-caption" class="text-center">
             <h3>{{title}}</h3>
             <div>{{ message }}</div>
         </div>
