(AngularJS) hero image

--- a/src/src/static/app/home/home.html
+++ b/src/src/static/app/home/home.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
-    <div id="hero-img" class="jumbotron">
-        <div id="hero-caption" class="text-center">
-            <h3>{{title}}</h3>
-            <div>{{ message }}</div>
-        </div>
+    <div id="hero-caption" class="text-center">
+        <h3>{{title}}</h3>
+        <h5>{{ message }}</h5>
     </div>
-    <!--<img class="img-responsive hero-img" src="/static/images/hero-01.jpg" alt="hero-img"/>-->
+    <!--<div id="hero-img">-->
+    <!--</div>-->
+    <img class="img-responsive hero-img" src="/static/images/hero-01.jpg" alt="hero-img"/>
 </div>
