(AngularJS) hero image

--- a/src/src/static/app/home/home.html
+++ b/src/src/static/app/home/home.html
@@ -5,5 +5,5 @@
     </div>
     <!--<div id="hero-img">-->
     <!--</div>-->
-    <img class="img-responsive hero-img" src="/static/images/hero-01.jpg" alt="hero-img"/>
+    <img id="hero-img" class="img-responsive" src="/static/images/hero-01.jpg" alt="hero-img"/>
 </div>
